<resources>
    <string name="app_name">calc</string>
    <string name="ac">AC</string>
    <string name="x_y">x^y</string>
    <string name="back">back</string>
    <string name="sqrt">sqrt</string>
    <string name="log2">log2</string>
    <string name="ln">ln</string>
    <string name="left_bracket">(</string>
    <string name="b_rightb">)</string>
    <string name="percent">%</string>
    <string name="del">/</string>
    <string name="division">/</string>
    <string name="sin">sin</string>
    <string name="multiplication">*</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="cos">cos</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="pi">pi</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="e">e</string>
    <string name="zero3">000</string>
    <string name="point">.</string>
    <string name="equally">=</string>
    <string name="zero">0</string>
</resources>