<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/operation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:gravity="end"
            android:textSize="50sp"
            android:ellipsize="start"
            android:text=""
            android:singleLine="true"
            tools:ignore="NestedWeights" />

        <!--Строка результата-->
        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:gravity="end"
            android:textSize="30sp"
            android:ellipsize="start"
            android:text=""
            android:singleLine="true"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:ignore="NestedWeights">
            <TextView
                style="@style/Operations_Sci"
                android:text="@string/sqrt"
                android:id="@+id/b_sqrt">
            </TextView>
            <TextView
                style="@style/Operations_Sci"
                android:text="@string/log2"
                android:id="@+id/b_log2">
            </TextView>
            <TextView
                style="@style/Operations_Sci"
                android:text="@string/ln"
                android:id="@+id/b_ln">
            </TextView>
            <TextView
                style="@style/Operations_Sci"
                android:text="@string/left_bracket"
                android:id="@+id/b_leftb">
            </TextView>
            <TextView
                style="@style/Operations_Sci"
                android:text="@string/b_rightb"
                android:id="@+id/b_rightb">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                style="@style/Operations_Sci"
                android:text="@string/x_y"
                android:id="@+id/xy">
            </TextView>

            <TextView
                style="@style/Operations"
                android:text="@string/ac"
                android:id="@+id/AC">
            </TextView>
            <TextView
                style="@style/Operations"
                android:text="@string/back"
                android:id="@+id/back">
            </TextView>
            <TextView
                style="@style/Operations"
                android:text="@string/percent"
                android:id="@+id/percent">
            </TextView>
            <TextView
                style="@style/Operations"
                android:text="@string/division"
                android:id="@+id/division">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                style="@style/Operations_Sci"
                android:text="@string/sin"
                android:id="@+id/sin">
            </TextView>
            <TextView
                style="@style/Numbers"
                android:text="@string/one"
                android:id="@+id/one">
            </TextView>
            <TextView
                style="@style/Numbers"
                android:text="@string/two"
                android:id="@+id/two">
            </TextView>
            <TextView
                style="@style/Numbers"
                android:text="@string/three"
                android:id="@+id/three">
            </TextView>
            <TextView
                style="@style/Operations"
                android:text="@string/multiplication"
                android:id="@+id/multiplication">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                style="@style/Operations_Sci"
                android:text="@string/cos"
                android:id="@+id/cos">
            </TextView>
            <TextView
                style="@style/Numbers"
                android:text="@string/four"
                android:id="@+id/four">
            </TextView>
            <TextView
                style="@style/Numbers"
                android:text="@string/five"
                android:id="@+id/five">
            </TextView>
            <TextView
                style="@style/Numbers"
                android:text="@string/six"
                android:id="@+id/six">
            </TextView>
            <TextView
                style="@style/Operations"
                android:text="@string/minus"
                android:id="@+id/minus">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                style="@style/Operations_Sci"
                android:text="@string/pi"
                android:id="@+id/pi">
            </TextView>
            <TextView
                style="@style/Numbers"
                android:text="@string/seven"
                android:id="@+id/seven">
            </TextView>
            <TextView
                style="@style/Numbers"
                android:text="@string/eight"
                android:id="@+id/eight">
            </TextView>
            <TextView
                style="@style/Numbers"
                android:text="@string/nine"
                android:id="@+id/nine">
            </TextView>
            <TextView
                style="@style/Operations"
                android:text="@string/plus"
                android:id="@+id/plus">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                style="@style/Operations_Sci"
                android:text="@string/e"
                android:id="@+id/e">
            </TextView>
            <TextView
                style="@style/Numbers"
                android:text="@string/zero3"
                android:id="@+id/zero3">
            </TextView>
            <TextView
                style="@style/Numbers"
                android:text="@string/point"
                android:id="@+id/point">
            </TextView>
            <TextView
                style="@style/Numbers"
                android:text="@string/zero"
                android:id="@+id/zero">
            </TextView>
            <TextView
                style="@style/Operations"
                android:text="@string/equally"
                android:id="@+id/equally">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>